MB-20074 Tolerate KVS creation racing

- If multiple threads are trying to open the same KVS first time,
then they will attempt to create the KVS simultaneously. Only one
thread will succeed while the others will fail.

- Those failures should be tolerated, and we need to proceed normal
KVS open bypassing the creation.

Change-Id: I6651f48dc6406e439fdbd972907f2664ed8dce38
Reviewed-on: http://review.couchbase.org/65544
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>